--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZwmi694D8JYwYQxnO+O+w",
+      "authorship_tag": "ABX9TyOSUoJ8kjOvkqPI4KWtdCvu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#**1.4 Data Relevance**"
+        "#**1.4 Data Relevance**\n",
+        "The data was not too relevant as it had many outliers and the independent variables were too correlated"
       ]
     },
     {
